2014-02-11  Richard Henderson  <rth@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	PR debug/59776
	* tree-sra.c (load_assign_lhs_subreplacements): Add VIEW_CONVERT_EXPR
	around drhs if type conversion to lacc->type is not useless.

2014-02-11  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64-cores.def (cortex-a57): Use cortexa57
	tuning struct.
	(cortex-a57.cortex-a53): Likewise.
	* config/aarch64/aarch64.c (cortexa57_tunings): New tuning struct.

2014-02-11  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/arm/thumb2.md (*thumb2_movhi_insn): Add alternatives for
	arm_restrict_it.

2014-02-11  Renlin Li  <Renlin.Li@arm.com>

	* doc/sourcebuild.texi: Document check_effective_target_arm_vfp3_ok and
	add_options_for_arm_vfp3.

2014-02-11  Jeff Law  <law@redhat.com>

	PR middle-end/54041
	* expr.c (expand_expr_addr_expr_1): Handle expand_expr returning an
	object with an undesirable mode.

2014-02-11  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR libgomp/60107
	* config/i386/sol2-9.h: New file.
	* config.gcc (i[34567]86-*-solaris2* | x86_64-*-solaris2.1[0-9]*,
	*-*-solaris2.9*): Use it.

2014-02-10  Nagaraju Mekala <nagaraju.mekala@xilinx.com>

	* config/microblaze/microblaze.md: Add movsi4_rev insn pattern.
	* config/microblaze/predicates.md: Add reg_or_mem_operand predicate.

2014-02-10  Nagaraju Mekala <nagaraju.mekala@xilinx.com>

	* config/microblaze/microblaze.c: Extend mcpu version format

2014-02-10  David Holsgrove <david.holsgrove@xilinx.com>

	* config/microblaze/microblaze.h: Define SIZE_TYPE and PTRDIFF_TYPE.

2014-02-10  Richard Henderson <rth@redhat.com>

	PR target/59927
	* calls.c (expand_call): Don't double-push for reg_parm_stack_space.
	* config/i386/i386.c (init_cumulative_args): Remove sorry for 64-bit
	ms-abi vs -mno-accumulate-outgoing-args.
	(ix86_expand_prologue): Unconditionally call ix86_eax_live_at_start_p.
	* config/i386/i386.h (ACCUMULATE_OUTGOING_ARGS): Fix comment with
	respect to ms-abi.
